--- a/output.css
+++ b/output.css
@@ -1890,3 +1890,9 @@ video {
     --tw-ring-color: rgb(30 64 175 / var(--tw-ring-opacity));
   }
 }
+
+nav:first-child
+{
+   position: fixed;
+   top: 0px;
+}
